# Calender-Generator

./: CMakeLists.txt  README.md  build_script.sh  html_file.html  reference_calander.html
src/: Generator.cpp  Generator.h  HtmlAttribute.cpp  HtmlAttribute.h  HtmlWriter.cpp  HtmlWriter.h  main.cpp
